Bug 1508789 - Force 'pointer-events: auto' used value for root content. r=mstange

It seems that other browsers don't allow 'pointer-events: none' on the root content,
and this can cause us interoperability issues.

Differential Revision: https://phabricator.services.mozilla.com/D12500